--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ certifi                      2024.7.4
 charset-normalizer           3.3.2
 colorama                     0.4.6
 comm                         0.2.2
+contourpy                    1.3.0
+cycler                       0.12.1
 debugpy                      1.8.5
 decorator                    5.1.1
 exceptiongroup               1.2.2
 executing                    2.0.1
 flatbuffers                  24.3.25
+fonttools                    4.53.1
 gast                         0.4.0
 google-auth                  2.34.0
 google-auth-oauthlib         1.0.0
@@ -21,6 +24,7 @@ grpcio                       1.66.1
 h5py                         3.11.0
 idna                         3.8
 importlib_metadata           8.4.0
+importlib_resources          6.4.4
 ipykernel                    6.29.5
 ipython                      8.18.1
 jax                          0.4.30
@@ -29,9 +33,11 @@ jedi                         0.19.1
 jupyter_client               8.6.2
 jupyter_core                 5.7.2
 keras                        2.12.0
+kiwisolver                   1.4.5
 libclang                     18.1.1
 Markdown                     3.7
 MarkupSafe                   2.1.5
+matplotlib                   3.9.2
 matplotlib-inline            0.1.7
 ml-dtypes                    0.4.0
 nest-asyncio                 1.6.0
@@ -39,7 +45,9 @@ numpy                        1.23.5
 oauthlib                     3.2.2
 opt-einsum                   3.3.0
 packaging                    24.1
+pandas                       2.2.2
 parso                        0.8.4
+pillow                       10.4.0
 pip                          24.2
 platformdirs                 4.2.2
 prompt_toolkit               3.0.47
@@ -49,13 +57,16 @@ pure_eval                    0.2.3
 pyasn1                       0.6.0
 pyasn1_modules               0.4.0
 Pygments                     2.18.0
+pyparsing                    3.1.4
 python-dateutil              2.9.0.post0
+pytz                         2024.1
 pywin32                      306
 pyzmq                        26.2.0
 requests                     2.32.3
 requests-oauthlib            2.0.0
 rsa                          4.9
 scipy                        1.13.1
+seaborn                      0.13.2
 setuptools                   49.2.1
 six                          1.16.0
 stack-data                   0.6.3
@@ -69,6 +80,7 @@ termcolor                    2.4.0
 tornado                      6.4.1
 traitlets                    5.14.3
 typing_extensions            4.12.2
+tzdata                       2024.1
 urllib3                      2.2.2
 wcwidth                      0.2.13
 Werkzeug                     3.0.4
